compiler/testData/diagnostics/tests/traitWithRequired/uninheritableTraitDifferentGenericArguments.kt
open class Generic<T>

trait A : Generic<String>

trait B : Generic<Int>

trait C : <!INCONSISTENT_TYPE_PARAMETER_VALUES!>A, B<!>
